[metadata]
name = ji
version = 0.0.7
url = https://github.com/t-c-w/ji
platforms = any
description_file = README.md
description = An illustration of various embeddings
license = apache-2.0
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = ji

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	scikit-learn

